--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.17.0",
     "@webriq/gatsby-webriq-form": "^1.0.2",
     "next": "10.0.9",
     "next-sanity": "^0.1.10",
