--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.17.1",
     "@webriq/gatsby-webriq-form": "^1.0.2",
+    "axios": "^0.21.4",
     "next": "10.0.9",
     "next-sanity": "^0.1.10",
     "react": "17.0.2",
