--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@webriq/gatsby-webriq-form": "^1.0.2",
+    "axios": "^0.21.4",
+    "date-fns": "^2.24.0",
     "next": "10.0.9",
     "next-sanity": "^0.1.10",
     "react": "17.0.2",
