--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.17.1",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
     "@webriq/gatsby-webriq-form": "^1.0.2",
     "axios": "^0.21.4",
     "next": "10.0.9",
