--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@webriq/gatsby-webriq-form": "^1.0.2",
     "axios": "^0.21.4",
     "date-fns": "^2.24.0",
+    "nanoid": "^3.1.28",
     "next": "10.0.9",
+    "next-safe": "^3.0.1",
     "next-sanity": "^0.1.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
