--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.24.0",
     "nanoid": "^3.1.28",
     "next": "10.0.9",
+    "next-pwa": "^5.3.1",
     "next-safe": "^3.0.1",
     "next-sanity": "^0.1.10",
     "react": "17.0.2",
