--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "axios": "^0.21.4",
     "date-fns": "^2.24.0",
     "nanoid": "^3.1.28",
-    "next": "10.0.9",
+    "next": "^11.1.2",
     "next-pwa": "^5.3.1",
     "next-safe": "^3.0.1",
     "next-sanity": "^0.1.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
