--- a/package.json
+++ b/package.json
@@ -5,21 +5,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.17.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
-    "axios": "^0.21.4",
+    "axios": "^0.23.0",
     "date-fns": "^2.24.0",
-    "next": "10.0.9",
-    "next-sanity": "^0.1.10",
+    "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "next-sanity": "^0.1.10"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.8",
-    "tailwindcss": "^2.0.4"
+    "tailwindcss": "^2.0.4",
+    "eslint": "8.0.1",
+    "eslint-config-next": "11.1.2"
   }
 }
