--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "axios": "^0.23.0",
     "date-fns": "^2.24.0",
     "next": "11.1.2",
+    "next-sanity": "^0.1.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "next-sanity": "^0.1.10"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "11.1.2",
     "postcss": "^8.2.8",
-    "tailwindcss": "^2.0.4",
-    "eslint": "8.0.1",
-    "eslint-config-next": "11.1.2"
+    "tailwindcss": "^2.0.4"
   }
 }
