--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.24.0",
     "next": "11.1.2",
     "next-sanity": "^0.1.10",
+    "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
