--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.17.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "axios": "^0.23.0",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
+    "nanoid": "^3.1.30",
     "next": "11.1.2",
     "next-sanity": "^0.1.10",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "stripe": "^8.191.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
