--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "axios": "^0.23.0",
     "date-fns": "^2.24.0",
+    "ipx": "^0.9.4",
     "next": "11.1.2",
     "next-sanity": "^0.1.10",
     "next-seo": "^4.28.1",
