update social media icons and added LinkedIn, YouTube and TikTok

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "sharp": "^0.30.2",
     "stripe": "^8.191.0"
   },
