--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "stripe": "^8.191.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "4.3.0",
+    "@netlify/plugin-nextjs": "^4.7.0",
     "autoprefixer": "^10.2.5",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.2",
