--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-seo": "^4.28.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-toast": "^1.0.3",
     "sharp": "^0.30.2",
     "stripe": "^8.191.0"
   },
