--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-toast": "^1.0.3",
+    "sass": "^1.55.0",
     "sharp": "^0.30.2",
-    "stripe": "^8.191.0"
+    "stripe": "^8.191.0",
+    "swiper": "7.0.5"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.7.0",
