--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^0.23.0",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "nanoid": "^3.1.30",
     "next": "^12.3.1",
     "next-sanity": "0.8.0-new-preview-mode.3",
     "next-seo": "^4.28.1",
+    "nextjs-cors": "^2.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-toast": "^1.0.3",
