Update cors and JWT implementation

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.17.1",
     "axios": "^0.23.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
     "jsonwebtoken": "^8.5.1",
@@ -22,7 +23,6 @@
     "next": "^12.3.1",
     "next-sanity": "0.8.0-new-preview-mode.3",
     "next-seo": "^4.28.1",
-    "nextjs-cors": "^2.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-toast": "^1.0.3",
