--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@portabletext/react": "^1.0.6",
-    "@sanity/image-url": "^1.0.1",
+    "@sanity/icons": "^2",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/types": "^3",
+    "@sanity/ui": "^1",
+    "@sanity/vision": "^3.5.0",
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.17.1",
     "axios": "^0.23.0",
@@ -21,15 +25,19 @@
     "lodash": "^4.17.21",
     "nanoid": "^3.1.30",
     "next": "^12.3.1",
-    "next-sanity": "^2.1.0",
+    "next-sanity": "4.1.5",
     "next-seo": "^4.28.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
+    "sanity": "^3",
     "sass": "^1.55.0",
     "sharp": "^0.30.2",
     "stripe": "^8.191.0",
-    "swiper": "7.0.5"
+    "styled-components": "^5.2",
+    "swiper": "7.0.5",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "3.0.3-sanity-v3.2.1"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "4.29.2",
