--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/vision": "^3.5.0",
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.17.1",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "3.0.3-sanity-v3.2.12",
     "axios": "^0.23.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -24,11 +25,11 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "nanoid": "^3.1.30",
-    "next": "^12.3.1",
+    "next": "^13.2.3",
     "next-sanity": "4.1.5",
     "next-seo": "^4.28.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
     "sanity": "^3",
@@ -36,14 +37,13 @@
     "sharp": "^0.30.2",
     "stripe": "^8.191.0",
     "styled-components": "^5.2",
-    "swiper": "7.0.5",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "3.0.3-sanity-v3.2.1"
+    "swiper": "7.0.5"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "4.29.2",
     "autoprefixer": "^10.4.7",
     "eslint": "^7.32.0",
-    "eslint-config-next": "11.1.2",
+    "eslint-config-next": "^13.2.3",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4"
   }
