--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^2.24.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "marked": "^4.2.12",
     "nanoid": "^3.1.30",
     "next": "^13.2.3",
     "next-sanity": "4.1.5",
