--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@portabletext/react": "^1.0.6",
-    "@sanity/icons": "^2",
+    "@portabletext/react": "^2.0.2",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/icons": "^2",
     "@sanity/types": "^3",
     "@sanity/ui": "^1",
-    "@sanity/vision": "^3.5.0",
+    "@sanity/vision": "^3.6.0",
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.17.1",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "3.0.3-sanity-v3.2.12",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "3.0.3-sanity-v3.2.2",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "3.0.3-sanity-v3.2.24",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "3.0.3-sanity-v3.2.18",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "3.0.3-sanity-v3.2.5",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "3.0.3-sanity-v3.2.7",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "3.0.1-sanity-v3.2.6",
+    "braille": "^1.1.0",
     "axios": "^0.23.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -30,21 +36,35 @@
     "next-seo": "^4.28.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.2.0",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
-    "sanity": "^3",
+    "sanity": "^3.6.0",
     "sass": "^1.55.0",
     "sharp": "^0.30.2",
     "stripe": "^8.191.0",
+    "sanity-plugin-asset-source-openai": "^1.1.2",
+    "sanity-plugin-iframe-pane": "^2.1.1",
+    "sanity-plugin-media": "^2.0.5",
     "styled-components": "^5.2",
     "swiper": "7.0.5"
   },
   "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@sanity/eslint-config-studio": "^2.0.1",
     "@netlify/plugin-nextjs": "4.29.2",
     "autoprefixer": "^10.4.14",
-    "eslint": "^7.32.0",
+    "eslint": "^8.33.0",
     "eslint-config-next": "^13.2.3",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "prettier": "^2.8.4",
+    "prettier-plugin-packagejson": "^2.4.3",
+    "prettier-plugin-tailwindcss": "^0.2.4",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
