Update packages to latest

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@portabletext/react": "^2.0.2",
-    "@sanity/image-url": "^1.0.2",
     "@sanity/icons": "^2",
+    "@sanity/image-url": "^1.0.2",
     "@sanity/types": "^3",
     "@sanity/ui": "^1",
     "@sanity/vision": "^3.6.0",
@@ -23,16 +23,16 @@
     "@webriq-pagebuilder/sanity-plugin-webriq-blog": "3.0.3-sanity-v3.2.5",
     "@webriq-pagebuilder/sanity-plugin-webriq-forms": "3.0.3-sanity-v3.2.7",
     "@webriq-pagebuilder/sanity-plugin-webriq-payments": "3.0.1-sanity-v3.2.6",
-    "braille": "^1.1.0",
     "axios": "^0.23.0",
+    "braille": "^1.1.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "nanoid": "^3.1.30",
-    "next": "^13.2.3",
-    "next-sanity": "4.1.5",
+    "next": "^13.2.4",
+    "next-sanity": "^4.1.5",
     "next-seo": "^4.28.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,19 +40,19 @@
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
     "sanity": "^3.6.0",
-    "sass": "^1.55.0",
-    "sharp": "^0.30.2",
-    "stripe": "^8.191.0",
     "sanity-plugin-asset-source-openai": "^1.1.2",
     "sanity-plugin-iframe-pane": "^2.1.1",
     "sanity-plugin-media": "^2.0.5",
-    "styled-components": "^5.2",
+    "sass": "^1.55.0",
+    "sharp": "^0.30.2",
+    "stripe": "^8.191.0",
+    "styled-components": "^5.3.5",
     "swiper": "7.0.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@sanity/eslint-config-studio": "^2.0.1",
     "@netlify/plugin-nextjs": "4.29.2",
+    "@sanity/eslint-config-studio": "^2.0.1",
+    "@types/react": "^18.0.28",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.33.0",
     "eslint-config-next": "^13.2.3",
