Component and page updates
1. Add Chakra UI to use for EditSection component
2. Update the EditSection component and add display to all sections when in preview mode
3. Show Chakra Drawer with studio iframe element on Edit Section button click
4. Update studio Live Badge URL env variable used for site URL
5. Update studio section badge
6. Update Ecwid Context to latest

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@portabletext/react": "^2.0.2",
     "@sanity/icons": "^2",
     "@sanity/image-url": "^1.0.2",
@@ -29,6 +32,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
+    "framer-motion": "^10.8.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "nanoid": "^3.1.30",
