--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
     "@sanity/vision": "^3.7.1",
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.17.1",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "3.0.3-sanity-v3.2.4",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "3.0.3-sanity-v3.2.2",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "3.0.3-sanity-v3.2.27",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "3.0.3-sanity-v3.2.21",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "3.0.3-sanity-v3.2.6",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "3.0.3-sanity-v3.2.7",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "3.0.1-sanity-v3.2.7",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "latest",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "latest",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "latest",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "latest",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "latest",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "latest",
     "axios": "^0.23.0",
     "braille": "^1.1.0",
     "cors": "^2.8.5",
