--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
     "framer-motion": "^10.8.4",
+    "history": "^5.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "marked": "^4.2.12",
@@ -40,6 +41,7 @@
     "next": "^13.2.4",
     "next-sanity": "^4.1.5",
     "next-seo": "^4.28.1",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
