--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "swiper": "7.0.5"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "4.29.2",
+    "@netlify/plugin-nextjs": "^4.33.0",
     "@sanity/eslint-config-studio": "^2.0.1",
     "@types/react": "^18.0.28",
     "autoprefixer": "^10.4.14",
