--- a/package.json
+++ b/package.json
@@ -8,56 +8,60 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update:next": "yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@next @webriq-pagebuilder/sanity-plugin-input-component-variants@next @webriq-pagebuilder/sanity-plugin-schema-blog@next @webriq-pagebuilder/sanity-plugin-schema-commerce@next @webriq-pagebuilder/sanity-plugin-schema-default@next @webriq-pagebuilder/sanity-plugin-schema-blog@next @webriq-pagebuilder/sanity-plugin-webriq-blog@next @webriq-pagebuilder/sanity-plugin-webriq-forms@next @webriq-pagebuilder/sanity-plugin-webriq-payments@next",
+    "update:latest": "yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@latest @webriq-pagebuilder/sanity-plugin-input-component-variants@latest @webriq-pagebuilder/sanity-plugin-schema-blog@latest @webriq-pagebuilder/sanity-plugin-schema-commerce@latest @webriq-pagebuilder/sanity-plugin-schema-default@latest @webriq-pagebuilder/sanity-plugin-schema-blog@latest @webriq-pagebuilder/sanity-plugin-webriq-blog@latest @webriq-pagebuilder/sanity-plugin-webriq-forms@latest @webriq-pagebuilder/sanity-plugin-webriq-payments@latest"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.5.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@portabletext/react": "^2.0.2",
-    "@sanity/icons": "^2",
+    "@sanity/icons": "2.2.2",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/types": "^3",
-    "@sanity/ui": "^1",
-    "@sanity/vision": "^3.7.1",
-    "@stripe/react-stripe-js": "^1.6.0",
+    "@sanity/studio-secrets": "^2.0.2",
+    "@sanity/types": "^3.8.3",
+    "@sanity/ui": "^1.3.1",
+    "@sanity/vision": "^3.8.3",
+    "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.17.1",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.0.5",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.0.5",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.0.5",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.0.5",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.0.5",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.0.5",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.0.5",
-    "axios": "^0.23.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.0.3",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.0.6",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.0.8",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.0.8",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.0.8",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.0.8",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.0.6",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.0.6",
+    "axios": "^1.3.5",
     "braille": "^1.1.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
     "framer-motion": "^10.8.4",
     "history": "^5.3.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "marked": "^4.2.12",
-    "nanoid": "^3.1.30",
+    "nanoid": "^4.0.0",
     "next": "^13.2.4",
     "next-sanity": "^4.1.5",
-    "next-seo": "^4.28.1",
+    "next-seo": "^6.0.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
-    "sanity": "^3.6.0",
+    "sanity": "^3.8.3",
     "sanity-plugin-asset-source-openai": "^1.1.2",
     "sanity-plugin-iframe-pane": "^2.1.1",
     "sanity-plugin-media": "^2.0.5",
     "sass": "^1.55.0",
-    "sharp": "^0.30.2",
-    "stripe": "^8.191.0",
+    "sharp": "^0.32.0",
+    "stripe": "^11.17.0",
     "styled-components": "^5.3.5",
-    "swiper": "7.0.5"
+    "swiper": "9.2.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.33.0",
@@ -70,11 +74,8 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-packagejson": "^2.4.3",
-    "prettier-plugin-tailwindcss": "^0.2.4",
+    "prettier-plugin-tailwindcss": "^0.2.7",
     "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.5"
-  },
-  "engines": {
-    "node": ">=16"
+    "typescript": "^5.0.3"
   }
 }
