--- a/package.json
+++ b/package.json
@@ -46,10 +46,8 @@
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.5",
     "react-icons": "^4.2.0",
     "react-is": "^18.2.0",
-    "react-split-pane": "^0.1.92",
     "react-toast": "^1.0.3",
     "sanity": "^3.8.3",
     "sanity-plugin-asset-source-openai": "^1.1.2",
@@ -57,6 +55,7 @@
     "sanity-plugin-media": "^2.0.5",
     "sass": "^1.55.0",
     "sharp": "^0.32.0",
+    "split-pane-react": "^0.1.3",
     "stripe": "^11.17.0",
     "styled-components": "^5.3.5",
     "swiper": "9.2.0"
