Update packages to latest and remove unused imports

--- a/package.json
+++ b/package.json
@@ -26,10 +26,9 @@
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.17.1",
     "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.0.4",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.0.7",
     "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.0.9",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.0.9",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.0.9",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "3.0.10",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "3.0.10",
     "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.0.9",
     "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.0.7",
     "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.0.7",
@@ -43,7 +42,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "marked": "^4.2.12",
-    "nanoid": "^4.0.0",
+    "nanoid": "^3.1.30",
     "next": "^13.2.4",
     "next-sanity": "^4.1.5",
     "next-seo": "^6.0.0",
