--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@stripe/stripe-js": "^1.17.1",
     "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.0.4",
     "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.0.9",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "3.0.10",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "3.0.10",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.0.12",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.0.11",
     "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.0.9",
     "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.0.7",
     "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.0.7",
