--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,11 @@
 # next.js
 /.next/
 /out/
+next-env.d.ts
 
 # production
 /build
+/studio/dist
 
 # misc
 .DS_Store
@@ -36,3 +38,6 @@ yarn-error.log*
 
 # vscode
 .vscode
+
+# typescript
+*.tsbuildinfo
