--- a/package.json
+++ b/package.json
@@ -1,51 +1,67 @@
 {
-  "name": "default",
-  "version": "0.0.1",
+  "name": "@webriq-pagebuilder/site-template-default",
+  "version": "3.0.0",
   "private": true,
+  "author": "WebriQ <info@webriq.com>",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update:next": "yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@next @webriq-pagebuilder/sanity-plugin-schema-blog@next @webriq-pagebuilder/sanity-plugin-schema-commerce@next @webriq-pagebuilder/sanity-plugin-schema-default@next @webriq-pagebuilder/sanity-plugin-schema-blog@next @webriq-pagebuilder/sanity-plugin-webriq-blog@next @webriq-pagebuilder/sanity-plugin-webriq-forms@next @webriq-pagebuilder/sanity-plugin-webriq-payments@next",
+    "update:latest": "yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@latest @webriq-pagebuilder/sanity-plugin-schema-blog@latest @webriq-pagebuilder/sanity-plugin-schema-commerce@latest @webriq-pagebuilder/sanity-plugin-schema-default@latest @webriq-pagebuilder/sanity-plugin-schema-blog@latest @webriq-pagebuilder/sanity-plugin-webriq-blog@latest @webriq-pagebuilder/sanity-plugin-webriq-forms@latest @webriq-pagebuilder/sanity-plugin-webriq-payments@latest"
   },
   "dependencies": {
-    "@portabletext/react": "^1.0.6",
-    "@sanity/icons": "^2",
+    "@portabletext/react": "^2.0.2",
+    "@sanity/icons": "^2.3.1",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/types": "^3",
-    "@sanity/ui": "^1",
-    "@sanity/vision": "^3.5.0",
-    "@stripe/react-stripe-js": "^1.6.0",
-    "@stripe/stripe-js": "^1.17.1",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "3.0.3-sanity-v3.2.12",
-    "axios": "^0.23.0",
+    "@sanity/types": "^3.9.0",
+    "@sanity/ui": "^1.3.2",
+    "@sanity/vision": "^3.9.0",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.1",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.0.4",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.0.9",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.0.12",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.0.11",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.0.9",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.0.7",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.0.7",
+    "axios": "^1.3.5",
+    "braille": "^1.1.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "marked": "^4.2.12",
-    "nanoid": "^3.1.30",
-    "next": "^13.2.3",
-    "next-sanity": "4.1.5",
-    "next-seo": "^4.28.1",
+    "marked": "^4.3.0",
+    "nanoid": "^4.0.2",
+    "next": "^13.3.0",
+    "next-sanity": "4.1.7",
+    "next-seo": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
-    "sanity": "^3",
-    "sass": "^1.55.0",
-    "sharp": "^0.30.2",
-    "stripe": "^8.191.0",
-    "styled-components": "^5.2",
-    "swiper": "7.0.5"
+    "sanity": "^3.9.0",
+    "sanity-plugin-asset-source-openai": "^1.1.2",
+    "sanity-plugin-iframe-pane": "^2.3.0",
+    "sanity-plugin-media": "^2.0.5",
+    "sass": "^1.62.0",
+    "sharp": "^0.32.0",
+    "stripe": "^12.1.1",
+    "styled-components": "^5.3.9",
+    "swiper": "9.2.3"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "4.29.2",
+    "@netlify/plugin-nextjs": "4.35.0",
+    "@types/react": "^18.0.37",
     "autoprefixer": "^10.4.14",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "^13.2.3",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "eslint": "^8.38.0",
+    "eslint-config-next": "^13.3.0",
+    "postcss": "^8.4.22",
+    "tailwindcss": "^3.3.1",
+    "typescript": "5.0.4"
   }
 }
