--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
+    "history": "^5.3.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "marked": "^4.3.0",
@@ -40,6 +41,7 @@
     "next": "^13.3.0",
     "next-sanity": "4.1.7",
     "next-seo": "^6.0.0",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
@@ -50,6 +52,7 @@
     "sanity-plugin-media": "^2.0.5",
     "sass": "^1.62.0",
     "sharp": "^0.32.0",
+    "split-pane-react": "^0.1.3",
     "stripe": "^12.1.1",
     "styled-components": "^5.3.9",
     "swiper": "9.2.3"
