--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/types": "^3.9.1",
     "@sanity/ui": "^1.3.2",
     "@sanity/vision": "^3.9.1",
+    "@sentry/nextjs": "^7.50.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
     "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.0.6",
