--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.0",
+    "@portabletext/to-html": "^2.0.0",
     "@sanity/icons": "^2.3.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/types": "^3.9.1",
@@ -34,6 +35,7 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
     "history": "^5.3.0",
+    "htm": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "marked": "^4.3.0",
@@ -55,7 +57,8 @@
     "split-pane-react": "^0.1.3",
     "stripe": "^12.2.0",
     "styled-components": "^5.3.10",
-    "swiper": "9.2.4"
+    "swiper": "9.2.4",
+    "vhtml": "^2.2.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "4.36.0",
