--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
   },
   "include": [
     "next-env.d.ts",
-    "types.d.ts",
+    "modules.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
