--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "start": "next start",
     "update:latest": "yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@latest @webriq-pagebuilder/sanity-plugin-schema-blog@latest @webriq-pagebuilder/sanity-plugin-schema-commerce@latest @webriq-pagebuilder/sanity-plugin-schema-default@latest @webriq-pagebuilder/sanity-plugin-schema-blog@latest @webriq-pagebuilder/sanity-plugin-webriq-blog@latest @webriq-pagebuilder/sanity-plugin-webriq-forms@latest @webriq-pagebuilder/sanity-plugin-webriq-payments@latest",
-    "update:next": "yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@next @webriq-pagebuilder/sanity-plugin-schema-blog@next @webriq-pagebuilder/sanity-plugin-schema-commerce@next @webriq-pagebuilder/sanity-plugin-schema-default@next @webriq-pagebuilder/sanity-plugin-schema-blog@next @webriq-pagebuilder/sanity-plugin-webriq-blog@next @webriq-pagebuilder/sanity-plugin-webriq-forms@next @webriq-pagebuilder/sanity-plugin-webriq-payments@next"
+    "update:next": "yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@next @webriq-pagebuilder/sanity-plugin-schema-blog@next @webriq-pagebuilder/sanity-plugin-schema-commerce@next @webriq-pagebuilder/sanity-plugin-schema-default@next @webriq-pagebuilder/sanity-plugin-schema-blog@next @webriq-pagebuilder/sanity-plugin-webriq-blog@next @webriq-pagebuilder/sanity-plugin-webriq-forms@next @webriq-pagebuilder/sanity-plugin-webriq-payments@next",
+    "update:custom": "echo 'Enter custom tag: 👇' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag"
   },
   "dependencies": {
     "@portabletext/react": "^3.0.0",
@@ -21,14 +22,15 @@
     "@sanity/vision": "^3.11.3",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.1.1",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.1.1",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.1.1",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.1.1",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.1.1",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.1.1",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "3.1.1",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.1.1",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.2.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.2.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.2.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.2.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.2.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.2.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.2.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.2.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.2.0",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "cors": "^2.8.5",
