--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.0",
+    "@portabletext/to-html": "^2.0.0",
+    "@sanity/code-input": "^4.1.1",
     "@sanity/icons": "^2.3.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/types": "^3.11.3",
@@ -22,15 +24,15 @@
     "@sanity/vision": "^3.11.3",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.2.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.2.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.2.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.2.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.2.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.2.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.2.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.2.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.2.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.2.1-feat-cstudio-v3.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.2.1-feat-cstudio-v3.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.2.1-feat-cstudio-v3.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.2.1-feat-cstudio-v3.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.2.1-feat-cstudio-v3.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.2.1-feat-cstudio-v3.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.2.1-feat-cstudio-v3.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.2.1-feat-cstudio-v3.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.2.1-feat-cstudio-v3.0",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "cors": "^2.8.5",
@@ -63,6 +65,7 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "4.37.2",
     "@types/react": "^18.2.0",
+    "@types/vhtml": "^2.2.4",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.4.4",
