--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.2.1-feat-cstudio-v3.0",
     "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.2.1-feat-cstudio-v3.0",
     "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.2.1-feat-cstudio-v3.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.2.1-feat-cstudio-v3.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "3.2.1-feat-cstudio-v3.1",
     "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.2.1-feat-cstudio-v3.0",
     "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.2.1-feat-cstudio-v3.0",
     "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.2.1-feat-cstudio-v3.0",
