--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.2.1",
     "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.2.0",
     "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.2.1",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.2.1",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.2.1",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "3.2.2-feat-components.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "3.2.2-feat-components.0",
     "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.2.1",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.2.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.2.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.2.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "3.2.2-feat-components.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "3.2.2-feat-components.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "3.2.2-feat-components.0",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "cors": "^2.8.5",
