--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
     "history": "^5.3.0",
+    "htm": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "marked": "^4.3.0",
@@ -60,7 +61,8 @@
     "split-pane-react": "^0.1.3",
     "stripe": "^12.7.0",
     "styled-components": "^5.3.11",
-    "swiper": "9.3.2"
+    "swiper": "9.3.2",
+    "vhtml": "^2.2.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "4.37.2",
