--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.3.0",
     "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.3.0",
     "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.3.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-scheduled-publishing": "3.3.2-scheduling.2",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "cors": "^2.8.5",
