--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@sanity/vision": "^3.11.3",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.3.4",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.3.3",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.3.4",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.3.5-cstudio-fixes.2",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.3.4",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.3.4",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.3.4",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.3.4",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.3.4",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.4.0-alpha.2",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.4.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.4.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.4.0-alpha.2",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.4.0-alpha.2",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.4.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.4.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.4.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.4.0-alpha.0",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "cors": "^2.8.5",
@@ -51,7 +51,7 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
-    "sanity": "^3.11.3",
+    "sanity": "^3.14.2",
     "sanity-plugin-asset-source-openai": "^1.1.2",
     "sanity-plugin-iframe-pane": "^2.3.0",
     "sanity-plugin-media": "^2.0.5",
