--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@sanity/vision": "^3.11.3",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.4.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.4.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.4.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.4.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.4.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.4.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.4.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.4.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.4.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.4.1-cstudio-fixes.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.4.1-cstudio-fixes.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.4.1-cstudio-fixes.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.4.1-cstudio-fixes.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.4.1-cstudio-fixes.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.4.1-cstudio-fixes.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.4.1-cstudio-fixes.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.4.1-cstudio-fixes.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.4.1-cstudio-fixes.0",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "cors": "^2.8.5",
