--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-config-next": "^13.4.4",
     "next-sitemap": "^4.1.8",
     "postcss": "^8.4.23",
+    "prettier": "^3.0.3",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   }
