Update next and sanity to latest and blog updates

--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "update:tag": "echo 'Enter custom tag: 👇 (eg: latest, next, your-own-tag)' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag @webriq-pagebuilder/sanity-plugin-desk-studio-version@$ctag @webriq-pagebuilder/sanity-plugin-inspector-inline-edit@$ctag"
   },
   "dependencies": {
-    "@portabletext/react": "^3.0.7",
+    "@portabletext/react": "^3.0.9",
     "@sanity/code-input": "^4.1.1",
-    "@sanity/icons": "^2.3.1",
+    "@sanity/icons": "^2.4.1",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/types": "^3.16.0",
-    "@sanity/ui": "1.7.4",
-    "@sanity/vision": "^3.16.0",
+    "@sanity/types": "^3.16.7",
+    "@sanity/ui": "^1.8.2",
+    "@sanity/vision": "^3.16.7",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
     "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^3.6.0",
@@ -43,15 +43,15 @@
     "lodash": "^4.17.21",
     "marked": "^4.3.0",
     "nanoid": "^3.1.30",
-    "next": "^13.4.4",
+    "next": "^13.5.4",
     "next-sanity": "4.3.3",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
-    "sanity": "^3.16.0",
-    "sanity-plugin-iframe-pane": "^2.5.5",
+    "sanity": "^3.16.7",
+    "sanity-plugin-iframe-pane": "^2.5.7",
     "sanity-plugin-media": "^2.2.2",
     "sass": "^1.62.1",
     "sharp": "^0.32.0",
