chore: upgrade to storybook@8

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@sanity/types": "^3.17.0",
     "@sanity/ui": "^1.8.2",
     "@sanity/vision": "^3.17.0",
+    "@storybook/test": "^8.0.0-beta.6",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
     "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^4.0.0",
@@ -75,18 +76,17 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.41.3",
-    "@storybook/addon-docs": "^7.6.5",
-    "@storybook/addon-essentials": "^7.6.5",
-    "@storybook/addon-interactions": "^7.6.5",
-    "@storybook/addon-links": "^7.6.5",
-    "@storybook/addon-mdx-gfm": "^7.6.5",
-    "@storybook/addon-onboarding": "^1.0.10",
-    "@storybook/blocks": "^7.6.5",
-    "@storybook/manager-api": "^7.6.8",
-    "@storybook/nextjs": "^7.6.5",
-    "@storybook/react": "^7.6.5",
-    "@storybook/testing-library": "^0.2.2",
-    "@storybook/theming": "^7.6.8",
+    "@storybook/addon-docs": "^8.0.0-beta.6",
+    "@storybook/addon-essentials": "^8.0.0-beta.6",
+    "@storybook/addon-interactions": "^8.0.0-beta.6",
+    "@storybook/addon-links": "^8.0.0-beta.6",
+    "@storybook/addon-mdx-gfm": "^8.0.0-beta.6",
+    "@storybook/addon-onboarding": "^8.0.0-beta.6",
+    "@storybook/blocks": "^8.0.0-beta.6",
+    "@storybook/manager-api": "^8.0.0-beta.6",
+    "@storybook/nextjs": "^8.0.0-beta.6",
+    "@storybook/react": "^8.0.0-beta.6",
+    "@storybook/theming": "^8.0.0-beta.6",
     "@types/react": "^18.2.0",
     "@types/vhtml": "^2.2.4",
     "autoprefixer": "^10.4.15",
@@ -98,7 +98,7 @@
     "next-sitemap": "^4.2.2",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
-    "storybook": "^7.6.5",
+    "storybook": "^8.0.0-beta.6",
     "tailwindcss": "^3.3.3",
     "typescript": "5.0.4"
   }
