--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "chromatic": "npx chromatic --project-token=chpt_68d919151b3e677 --only-changed"
   },
   "dependencies": {
-    "@portabletext/react": "^3.0.9",
-    "@sanity/code-input": "^4.1.1",
-    "@sanity/icons": "^2.4.1",
+    "@portabletext/react": "^3.0.11",
+    "@sanity/code-input": "^4.1.3",
+    "@sanity/icons": "^2.10.3",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/types": "^3.17.0",
-    "@sanity/ui": "^1.8.2",
-    "@sanity/vision": "^3.17.0",
+    "@sanity/types": "^3.30.1",
+    "@sanity/ui": "^2.0.7",
+    "@sanity/vision": "^3.30.1",
     "@storybook/test": "^8.0.0-beta.6",
-    "@stripe/react-stripe-js": "^2.1.0",
-    "@stripe/stripe-js": "^1.52.1",
+    "@stripe/react-stripe-js": "^2.5.1",
+    "@stripe/stripe-js": "^3.0.7",
     "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^4.0.2",
     "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^4.0.2",
     "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^4.0.2",
@@ -41,36 +41,36 @@
     "@webriq-pagebuilder/sanity-plugin-webriq-components": "^4.0.2",
     "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^4.0.2",
     "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^4.0.2",
-    "axios": "^1.3.6",
+    "axios": "^1.6.7",
     "braille": "^1.1.0",
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
-    "date-fns": "^2.24.0",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^3.3.1",
     "deepmerge": "^4.3.1",
     "history": "^5.3.0",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "magicast": "^0.3.3",
-    "marked": "^4.3.0",
-    "msw-storybook-addon": "1.8.0",
-    "nanoid": "^3.1.30",
-    "next": "^14.1.0",
-    "next-sanity": "4.3.3",
-    "polished": "^4.2.2",
+    "marked": "^12.0.0",
+    "msw-storybook-addon": "1.10.0",
+    "nanoid": "^5.0.6",
+    "next": "^14.1.2",
+    "next-sanity": "^7.1.4",
+    "polished": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
-    "sanity": "^3.17.0",
-    "sanity-plugin-iframe-pane": "^2.5.7",
-    "sanity-plugin-media": "^2.2.2",
-    "sass": "^1.62.1",
-    "sharp": "^0.32.0",
+    "sanity": "^3.30.1",
+    "sanity-plugin-iframe-pane": "^3.1.3",
+    "sanity-plugin-media": "^2.2.5",
+    "sass": "^1.71.1",
+    "sharp": "^0.33.2",
     "split-pane-react": "^0.1.3",
-    "stripe": "^12.7.0",
-    "styled-components": "^5.2",
-    "swiper": "^10.2.0",
+    "stripe": "^14.19.0",
+    "styled-components": "^6.1.8",
+    "swiper": "^11.0.7",
     "tailwind-merge": "^2.0.0",
     "ts-dedent": "^2.2.0"
   },
@@ -87,19 +87,19 @@
     "@storybook/nextjs": "^8.0.0-beta.6",
     "@storybook/react": "^8.0.0-beta.6",
     "@storybook/theming": "^8.0.0-beta.6",
-    "@types/react": "^18.2.0",
-    "@types/vhtml": "^2.2.4",
-    "autoprefixer": "^10.4.15",
+    "@types/react": "^18.2.62",
+    "@types/vhtml": "^2.2.9",
+    "autoprefixer": "^10.4.18",
     "chromatic": "^11.0.0",
-    "eslint": "^8.39.0",
-    "eslint-config-next": "^14.1.0",
-    "eslint-plugin-storybook": "^0.6.15",
-    "msw": "1.3.2",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.2",
+    "eslint-plugin-storybook": "^0.8.0",
+    "msw": "2.2.2",
     "next-sitemap": "^4.2.2",
-    "postcss": "^8.4.29",
-    "prettier": "^3.0.3",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
     "storybook": "^8.0.0-beta.6",
-    "tailwindcss": "^3.3.3",
-    "typescript": "5.0.4"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.3.3"
   }
 }
