--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint",
     "start": "next start",
     "update:tag": "echo 'Enter custom tag: 👇 (eg: latest, next, your-own-tag)' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag @webriq-pagebuilder/sanity-plugin-desk-studio-version@$ctag @webriq-pagebuilder/sanity-plugin-inspector-inline-edit@$ctag",
+    "update:sanity-latest": "yarn add @sanity/types@latest @sanity/vision@latest sanity@latest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "build-storybook-docs": "storybook build --docs",
@@ -24,9 +25,9 @@
     "@sanity/code-input": "^4.1.3",
     "@sanity/icons": "^2.10.3",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/types": "^3.30.1",
+    "@sanity/types": "^3.31.0",
     "@sanity/ui": "^2.0.7",
-    "@sanity/vision": "^3.30.1",
+    "@sanity/vision": "^3.31.0",
     "@storybook/test": "^8.0.0-beta.6",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.7",
@@ -56,13 +57,13 @@
     "msw-storybook-addon": "1.10.0",
     "nanoid": "^5.0.6",
     "next": "^14.1.2",
-    "next-sanity": "^7.1.4",
+    "next-sanity": "^8.1.3",
     "polished": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
-    "sanity": "^3.30.1",
+    "sanity": "^3.31.0",
     "sanity-plugin-iframe-pane": "^3.1.3",
     "sanity-plugin-media": "^2.2.5",
     "sass": "^1.71.1",
@@ -94,7 +95,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.2",
     "eslint-plugin-storybook": "^0.8.0",
-    "msw": "2.2.2",
+    "msw": "1.3.2",
     "next-sitemap": "^4.2.2",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
