Update styled-components and media plugin versions

--- a/package.json
+++ b/package.json
@@ -65,12 +65,12 @@
     "react-toast": "^1.0.3",
     "sanity": "^3.31.0",
     "sanity-plugin-iframe-pane": "2.5.8",
-    "sanity-plugin-media": "2.2.2",
+    "sanity-plugin-media": "^2.2.5",
     "sass": "^1.71.1",
     "sharp": "^0.33.2",
     "split-pane-react": "^0.1.3",
     "stripe": "^14.19.0",
-    "styled-components": "^6.1.8",
+    "styled-components": "^5.2",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.0.0",
     "ts-dedent": "^2.2.0"
