--- a/.gitignore
+++ b/.gitignore
@@ -29,11 +29,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env.local
-.env.development
-.env.test.local
-.env.production.local
-.env.staging*
+.env.*
 
 # vercel
 .vercel
