add link dependencies in package.json

--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "@webriq-pagebuilder/sanity-plugin-schema-blog": "^4.0.3",
     "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^4.0.3",
     "@webriq-pagebuilder/sanity-plugin-schema-default": "^4.0.3",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^4.0.3",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^4.0.3",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^4.0.3",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^4.0.3",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "link:.yalc/@webriq-pagebuilder/sanity-plugin-webriq-blog",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "link:.yalc/@webriq-pagebuilder/sanity-plugin-webriq-components",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "link:.yalc/@webriq-pagebuilder/sanity-plugin-webriq-forms",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "link:.yalc/@webriq-pagebuilder/sanity-plugin-webriq-payments",
     "axios": "^1.6.7",
     "braille": "^1.1.0",
     "clsx": "^2.0.0",
