--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.0.0-rc.4",
+    "@playwright/test": "^1.42.1",
     "@storybook/addon-docs": "^8.0.0",
     "@storybook/addon-essentials": "^8.0.0",
     "@storybook/addon-interactions": "^8.0.0",
@@ -88,6 +89,7 @@
     "@storybook/react": "^8.0.0",
     "@storybook/testing-library": "^0.2.2",
     "@storybook/theming": "^8.0.0",
+    "@types/node": "^20.11.30",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
     "@types/vhtml": "^2.2.4",
