chore: upgrade to next 14.2.3 and yarn v4

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,12 @@ storybook-static/
 /blob-report/
 /playwright/.cache/
 playwright/.auth/
+
+# Yarn 3
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
