chore: try macos-13 runner

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,7 +4,7 @@ on:
 jobs:
   playwright-tests:
     timeout-minutes: 180
-    runs-on: ubuntu-latest
+    runs-on: macos-13
     strategy:
       fail-fast: false
       matrix:
@@ -64,7 +64,7 @@ jobs:
     if: ${{ !cancelled() }}
     needs: [playwright-tests]
 
-    runs-on: ubuntu-latest
+    runs-on: macos-13
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
