--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,6 +1,10 @@
 name: Playwright Tests
 on:
-  deployment_status:
+  pull_request:
+    branches:
+      - master
+      - main
+
 jobs:
   playwright-tests:
     timeout-minutes: 120
